# tracker_api

./: .env.examples  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
api/api/: settings.py  urls.py
api/services/: models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
api/services/migrations/: 0001_initial.py
